[package]
name = "blog_format_tool"
version = "0.1.0"
description = "Markdown & image converter for Astro blog"
authors = ["you"]
edition = "2021"

[lib]
name = "blog_format_tool_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
regex = "1"
pulldown-cmark = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

